Atualizando o component menu-title.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,2 @@
-<app-small-card></app-small-card>
-<router-outlet><router-outlet />
-<app-big-card></app-big-card>
+<app-menu-title></app-menu-title>
 
