Atualizando e concentrando o component big-card.

--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,1 +1,21 @@
-<p>big-card works!</p>
+<div class="container__big-card">
+
+    <div class="big-card__picture">
+        
+        <img 
+            src="https://testing-angular.com/assets/img/code-coverage-flickr-search.png" 
+            alt="place-holder"
+            >
+           
+            
+    </div>
+
+
+    <div class="big-card__title">
+        <h1><a href="">Saiu a nova versão do Angular</a></h1>
+    </div>
+
+    <div class="big-card__description">
+        <p> <a href="">Angular é uma plataforma de desenvolvimento para construir aplicações web móveis e desktop. Ele usa HTML, CSS e JavaScript.</a></p>
+    </div>
+</div>
