--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
 *{
-   background-color: black;
+   background-color: #111111;
    margin: 0px;
    padding: 0px;
-   
+   box-sizing: border-box;
+   color: white;
+   font-family: 'Segoe UI', sans-serif;
+
+}
+
+a{
+    text-decoration: none;
 }
