--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -3,8 +3,9 @@
     <div class="big-card__picture">
         
         <img 
-            src="https://testing-angular.com/assets/img/code-coverage-flickr-search.png" 
+            src="https://m.media-amazon.com/images/S/pv-target-images/144540abcf5eb3ca17ea30a5ac3554dcd011a2880ccfba9694d13b27362060fe.jpg" 
             alt="place-holder"
+            
             >
            
             
@@ -16,6 +17,6 @@
     </div>
 
     <div class="big-card__description">
-        <p> <a href="">Angular é uma plataforma de desenvolvimento para construir aplicações web móveis e desktop. Ele usa HTML, CSS e JavaScript.</a></p>
+        <p> <a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ex elit, porta sed pulvinar a, tristique vel justo. Morbi pretium nisl vitae tellus cursus, ut mollis lacus finibus. Aenean sit amet erat eget dui suscipit sodales. Proin eu vestibulum ante, et faucibus enim. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Sed ut condimentum magna. Aenean nec arcu ac est pellentesque bibendum. Etiam sem dui, consectetur a tincidunt sed, sollicitudin eu metus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vivamus finibus viverra mollis.</a></p>
     </div>
 </div>
