--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -1,1 +1,23 @@
-<p>Ele funciona!!!</p>
+<div class="container__small-card">
+
+
+    <div class="container__small-card-content">
+        <div class="small-card__picture">
+            <img 
+                src="https://classic.exame.com/wp-content/uploads/2018/04/vingadores.jpg?quality=70&strip=info&w=1024" 
+                alt="place-holder"
+                >
+        </div>
+    
+        <div class="small-card__title">
+            <h1><a href="#">Saiu a nova versão do Angular</a></h1>
+        </div>
+    </div>
+    
+    <div class="container__small-card__separator">
+        <hr/>
+    </div>
+    
+    
+</div>
+
