--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -1,1 +1,10 @@
-<p>menu-bar works!</p>
+<div class="container__menu-bar">
+    <ul>
+        <li><a href="https://linkedin.com/in/breno-ramos0512">Linkedin</a></li>
+        <li><span>•</span></li>
+        
+        <li><a href="https://github.com/brsg05">GitHub</a></li>
+        <li><span>•</span></li>
+        <li><a href="$">Youtube</a></li>
+    </ul>
+</div>
