Atualizando os componentes big-card e small-card para aceitar propriedades dinâmicas e ajustando a página inicial para utilizar essas novas propriedades.

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,14 +3,16 @@
 </header>
 
 <app-menu-title></app-menu-title>
+
 <div class="container__articles">
     <div class="articles__main">
-        <app-big-card></app-big-card>
+        <app-big-card pictureCover="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS1rIWZdIa6hfBRsNAFtrRjPFreZQj9Zomtgg&s" cardTitle="Filme do homem de ferro supreende a todos." cardDescription="Esse filme do iron man vai ser massa demais"></app-big-card>
     </div>
 
     <div class="articles__others">
+        <app-small-card pictureCover="https://lumiere-a.akamaihd.net/v1/images/eu_disneyplus_avengers-endgame_c169_r_f4af8cb5.jpeg?region=355,0,921,921" cardTitle="O homem de ferro vai voltar em avengers doomsday"></app-small-card>
         <app-small-card></app-small-card>
-        <app-small-card></app-small-card>
+        
         <app-small-card></app-small-card>
     </div>
 </div>
