--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -4,13 +4,13 @@
     <div class="container__small-card-content">
         <div class="small-card__picture">
             <img 
-                src="https://classic.exame.com/wp-content/uploads/2018/04/vingadores.jpg?quality=70&strip=info&w=1024" 
-                alt="place-holder"
+                src="{{pictureCover}}" 
+                alt=""
                 >
         </div>
     
         <div class="small-card__title">
-            <h1><a href="#">Saiu a nova versão do Angular</a></h1>
+            <h1><a href="#">{{cardTitle}}</a></h1>
         </div>
     </div>
     
